fix(angular/button): align sbb-icon inside buttons (#1024)

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -144,6 +144,9 @@
   --sbb-breadcrumb-trigger-padding-horizontal: calc(#{pxToRem(30)} * var(--sbb-scaling-factor));
   --sbb-breadcrumb-trigger-padding-vertical: calc(#{pxToRem(14)} * var(--sbb-scaling-factor));
 
+  // Button
+  --sbb-button-icon-top-margin: calc(#{pxToRem(-12.5)} * var(--sbb-scaling-factor));
+
   // Chips
   --sbb-chips-list-height: var(--sbb-form-input-min-height);
   --sbb-chips-chip-margin-vertical: calc(2 * var(--sbb-border-width));
@@ -1318,19 +1321,9 @@ textarea {
   // Subtract 1 from the padding values, since we always use the border
   // in order to avoid tearing on state changes.
   padding: calc(#{pxToRem(5)} * var(--sbb-scaling-factor)) !important;
+  height: calc(#{pxToRem(36)} * var(--sbb-scaling-factor));
   min-width: auto;
   line-height: 0 !important;
-
-  // .sbb-icon-scaled styles
-  .sbb-icon {
-    width: var(--sbb-icon-size-default);
-    height: var(--sbb-icon-size-default);
-
-    svg {
-      width: 100%;
-      height: 100%;
-    }
-  }
 }
 
 :is(
@@ -1400,6 +1393,23 @@ textarea {
   }
 }
 
+// We need to position and scale icons inside the buttons in a special way.
+:is(.sbb-button, .sbb-alt-button, .sbb-secondary-button, .sbb-ghost-button, .sbb-icon-button, .sbb-frameless-button, .sbb-link:where(.sbb-button-base))
+  .sbb-icon {
+  width: var(--sbb-icon-size-default);
+  height: var(--sbb-icon-size-default);
+  margin-top: var(--sbb-button-icon-top-margin);
+
+  &:not(.sbb-button-indicator-icon) {
+    transform: translateY(calc(var(--sbb-button-icon-top-margin) / -2));
+  }
+
+  > svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .sbb-button-indicator-icon {
   transition: {
     duration: var(--sbb-transition-duration-default);
@@ -1410,12 +1420,6 @@ textarea {
   pointer-events: none;
   position: absolute;
   top: 50%;
-  margin-top: calc(#{pxToRem(-12.5)} * var(--sbb-scaling-factor));
-
-  &.sbb-icon-fit {
-    width: var(--sbb-icon-size-default);
-    height: var(--sbb-icon-size-default);
-  }
 
   :is(.sbb-button-base.sbb-disabled, .sbb-button-base.sbb-disabled:hover) & {
     opacity: 0;
